sftp: close connection on fatal errors

might require future refactoring to route more errors through
reportError to cover all cases but looking through the code the most
relevant points already do so while most other errors are of an
recoverable nature

BUG: 495801


(cherry picked from commit 9d624e7c388a3b32c49783e0bfb4e8fd5845a475)

Co-authored-by: Harald Sitter <sitter@kde.org>